Fixed the scrollbar position and background color.

--- a/styles/terminal.less
+++ b/styles/terminal.less
@@ -14,10 +14,17 @@ terminal-view {
     height: 100%;
     font-family: Menlo, Consolas, Monaco, 'DejaVu Sans Mono', monospace;
     font-size: 12px;
-    
+
     .xterm-viewport {
-      position: absolute;
-      right: 0;
+      width: 100%;
+
+      &::-webkit-scrollbar-thumb {
+        border-color: transparent;
+      }
+
+      &::-webkit-scrollbar-track {
+        background-color: #000;
+      }
     }
   }
 }
